--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -15,7 +10,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 50vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,4 +30,43 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.menu ul {
+  background-color: #222;
+  background-color: pink;
+  margin: 0;
+}
+
+.menu li {
+  font-family: sans-serif;
+  font-size: 1.2em;
+  line-height: 40px;
+  height: 40px;
+  border-bottom: 1px solid #888;
+}
+
+.menu a {
+  text-decoration: none;
+  color: #fff;
+  display: block;
+}
+.btn {
+  background: blue;
+  color: white;
+  border-radius: 3px;
+  text-decoration: none;
+  min-width: 200px;
+  padding: 5px;
+  padding-top: 3px;
+  vertical-align: middle;
+  margin-right: 20px;
+}
+.mainPage {
+  padding-left: 20px;
 }
